fix the overflow behavior of math formulae

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,6 +130,10 @@ li {
   padding: 0.5rem;
 }
 
+.upcards-math-block {
+  overflow-x: auto;
+}
+
 pre {
   margin-bottom: 0rem;
 }
